--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.17",
     "turbo": "^2.5.6",
     "typescript": "5.9.2"
   },
