create routes + frontend config and fetch

--- a/apps/rest-api/package.json
+++ b/apps/rest-api/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@repo/prisma": "*",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.34.0",
