--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
   },
+  "dependencies": {
+    "date-fns": "^3.6.0",
+    "@prisma/client": "^6.15.0"
+  },
   "devDependencies": {
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "turbo": "^2.5.6",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "@types/node": "^24.3.0",
+    "prisma": "^5.0.0",
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=18"
