feat: Clean up packages/prisma-config by removing seed-related files

--- a/packages/prisma-config/package.json
+++ b/packages/prisma-config/package.json
@@ -1,8 +1,5 @@
 {
     "name": "@repo/prisma",
     "version": "0.0.0",
-    "main": "index.ts",
-    "prisma": {
-        "seed": "node lib/seed.js"
-    }
+    "main": "index.ts"
 }
